k8s/namespaces/prometheus/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stackdriver
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: prometheus

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: stackdriver
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
