k8s/namespaces/prometheus/01-netpol.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus
  namespace: stackdriver
spec:
  egress:
  - {}
  ingress:
  - from:
    ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Ingress
  - Egress
---
